Fixed some layout issues with the footer and mobile

--- a/src/components/UI/Cards/_ItemCard.scss
+++ b/src/components/UI/Cards/_ItemCard.scss
@@ -24,4 +24,8 @@
             outline: solid 4px $gray-400;
         }
     }
+    
+    @media (max-width: 800px) {
+        opacity: 1;
+    }
 }
